cmake_minimum_required(VERSION 3.26)
project(test1)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.c)
add_executable(test1 Classwork1.cpp)
add_executable(FuncTest FuncTest.cpp)
add_executable(test2 testClass.cpp)
add_executable(pointer pointer.cpp)
add_executable(mutiThread MutiThread.cpp)
add_executable(work1 work1.c)
add_executable(work2 work2.c)
add_executable(work3 work3.cpp)
add_executable(work4 work4.c)
add_executable(sort sort.cpp)
add_executable(test5 test5.cpp)
add_executable(ClassWork2 ClassWork2.c)
add_executable(Queue Queue.cpp)
add_executable(Stack Stack.cpp)
add_executable(HouseManager HouseManager.cpp)
add_executable(TestList TestList.cpp)
add_executable(Calculator Cauculator.cpp)
add_executable(Calculator_v1 Calculator_v1.cpp)
