cmake_minimum_required(VERSION 3.26)
project(test1)

#set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD 17)

add_executable(main main.c)
add_executable(FuncTest FuncTest.cpp)
add_executable(test2 testClass.cpp)
add_executable(pointer ArrayToFunc.cpp)
add_executable(mutiThread MutiThread.cpp)
add_executable(work1 work1.c)
add_executable(work2 ConsFunc.cpp
)
add_executable(work3 work3.cpp)
add_executable(work4 work4.c)
add_executable(sort sort.cpp)
add_executable(ClassWork2 SortTest.c)
add_executable(Queue CircularQueue.cpp)
add_executable(Stack Stack.cpp)
add_executable(HouseManager HouseManager.cpp)
add_executable(TestList TestList.cpp)
add_executable(Calculator_v1 RevPolishCalculator.cpp)
add_executable(pointer_v2 Pointer_NodeList.c)
add_executable(pointer_test1 Pointer_Test1.c)
#target_compile_features(work2 PUBLIC cxx_std_98)
add_executable(work5 work5.c)
add_executable(files CFILEOperate.c)
