cmake_minimum_required(VERSION 3.26)
project(test1)

#set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD 17)

add_executable(main main.c)
add_executable(FuncTest FuncTest.cpp)
add_executable(ArrayToFunc ArrayToFunc.cpp)
add_executable(mutiThread MultiThread.cpp)
add_executable(ConsFunc ConsFunc.cpp)
add_executable(work4 work4.c)
add_executable(sort sort.cc)
add_executable(SortTest SortTest.c)
add_executable(CircularQueue CircularQueue.cpp)
add_executable(Stack Stack.cpp)
add_executable(HouseManager HouseManager.cpp)
add_executable(RevPolishCalculator RevPolishCalculator.cpp)
add_executable(Pointer_NodeList Pointer_NodeList.c)
add_executable(Pointer_Test1 Pointer_Test1.c)
#target_compile_features(work2 PUBLIC cxx_std_98)
add_executable(CFILEOperate CFILEOperate.c)
add_executable(RedBlackTree RedBlackTree.cpp)
